feat: 多模块门店响应改用OrgSimpleVO及操作日志枚举化
- VO字段统一从List<Long> orgIds改为List<OrgSimpleVO> orgs，涵盖服务项、产品、疗程券、优惠券、充值活动、充值提成规则
- SysOrgService新增getOrgSimpleMapByIds/getOrgSimpleListByIds共享方法
- 各ServiceImpl批量填充门店信息，消除重复代码
- OperLog注解module字段从String改为OperLogModule枚举
- 为关键业务Controller补全@OperLog操作日志注解
- UserUpdateDTO日期字段@JsonFormat替代@DateTimeFormat

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>